<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        tools:context=".SettingsActivity">


        <include
            android:id="@+id/included_tool_bar"
            layout="@layout/bar_layout" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/user_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image_background"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/if_rounded_31_2024644" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:elevation="16dp"
                    android:foreground="@drawable/icons8"
                    tools:targetApi="lollipop" />

            </RelativeLayout>


            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@id/user_image"
                android:layout_toRightOf="@id/user_image"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@id/user_image"
                android:layout_toRightOf="@id/user_image"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name"
                android:padding="16dp"
                android:text="@string/enter_your_name_and_add_an_optional_profile_picture_n_n"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/bio"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bio"
                android:padding="16dp"
                android:text="@string/any_details_such_age_occupation_or_city_example_23_y_o_designer_from_baghdad_n_n"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/change_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@id/change_number"
                android:layout_toRightOf="@id/change_number"
                android:hint="@string/your_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:singleLine="true"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/change_number"
                android:padding="16dp"
                android:text="@string/country"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/country_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/change_number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@id/change_number"
                android:layout_toRightOf="@id/change_number"
                android:hint="@string/your_country"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:singleLine="true"
                tools:targetApi="o" />

        </RelativeLayout>


        <Button
            android:id="@+id/log_out_setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:background="@drawable/input"
            android:text="@string/log_out" />
    </LinearLayout>
</ScrollView>